# learn-c

./: .gitignore  CMakeLists.txt  basic-tutorial-1.c  basic-tutorial-2.c  basic-tutorial-3.c  flake.nix  gmon.out  main.c  queue.c  stack.c
.cache/clangd/index/: basic-tutorial-3.c.516D5BF9F3BEA8F3.idx
